--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WHAM</title>
+    <title>KLAK</title>
+    <link rel="icon" type="image/svg" href="shield_black_24dp.svg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
